--- a/tfCoursePrj1.ipynb
+++ b/tfCoursePrj1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "tfCoursePrj1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMPb6qpylpV6RVspQsMYCCI",
+      "authorship_tag": "ABX9TyML3lcVHfIKeVQxaQnYq6Zl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,6 +28,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BPNKvejSy_Yj"
+      },
+      "source": [
+        "https://github.com/lmoroney/dlaicourse/blob/master/Course%201%20-%20Part%202%20-%20Lesson%202%20-%20Notebook.ipynb"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "g4h35gHWZT2r"
@@ -37,7 +46,7 @@
         "import numpy as np\n",
         "from tensorflow import keras"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -48,7 +57,7 @@
       "source": [
         "model = tf.keras.Sequential([keras.layers.Dense(units=1, input_shape=[1])])"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -59,7 +68,7 @@
       "source": [
         "model.compile(optimizer='sgd', loss='mean_squared_error')"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -71,7 +80,7 @@
         "xs = np.array([-1.0,  0.0, 1.0, 2.0, 3.0, 4.0], dtype=float)\n",
         "ys = np.array([-3.0, -1.0, 1.0, 3.0, 5.0, 7.0], dtype=float)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -86,7 +95,7 @@
       "source": [
         "model.fit(xs, ys, epochs=500)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1120,7 +1129,7 @@
       "source": [
         "print(model.predict([10.0]))"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
